Fixed footer overlap in small sreen

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -128,6 +128,7 @@ input[type="submit"]:hover {
   grid-template-rows: 0.5fr 1fr 1fr;
   grid-gap: 1rem;
   padding-top: 1rem;
+  padding-bottom: 1.5rem;
   color: $main-text-color;
 }
 
